--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<title>Dva Demo</title>
 		<link rel="stylesheet" href="index.css" />
 		<link rel="stylesheet" type="text/css" href="animate.css"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.css">
 	</head>
 
 	<body>
